--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .footer-content {
@@ -21,3 +22,4 @@
 .footer-content p {
   color: var(--color-grey-3);
 }
+
