--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,6 +27,8 @@ h4 {
 .home-header .button {
   margin-left: auto;
   margin-right: 80px;
+  position: sticky;
+  top: 25px;
 }
 .participants {
   padding: 50px 0;
