--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@ h4 {
 .home-header {
   padding: 200px 0;
   background-image: url(./../images/bg.jpg);
+  position: relative;
 }
 
 .home-header-content {
